# CostPilot

./: .dockerignore  .env.example  .gitignore  BENCHMARK.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  build.gradle  docker-compose.real.yml  docker-compose.yml  settings.gradle
.github/workflows/: ci.yml
cli/: build.gradle
docker/clickhouse/init/: 01_schema.sql
docker/grafana/dashboards/: costpilot-governance.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docker/prometheus/: prometheus.yml
loadtest/: run-live.sh  run.sh
loadtest/k6/: live.js  loadtest.js
sdk/python/: .gitignore  LICENSE  README.md  pyproject.toml
sdk/python/src/costpilot/: __init__.py  _async.py  _client.py  _core.py  _models.py  _sse.py  errors.py
sdk/python/tests/: _helpers.py  test_async.py  test_errors.py  test_streaming.py  test_sync.py
secrets/: .gitignore
src/main/java/com/costpilot/: CostpilotApplication.java
src/main/resources/: application.yml
src/main/resources/db/migration/: V10__usage_record_savings.sql  V11__pending_approval.sql  V12__admin_audit.sql  V13__prompt_cache.sql  V14__live_model_price_and_policy.sql  V1__core_schema.sql  V2__seed_core_data.sql  V3__usage_record.sql  V4__price_versioning.sql  V5__budget.sql  V6__policy_rule.sql  V7__audit_record.sql  V8__api_key_auth.sql  V9__model_capability.sql
src/main/resources/static/dashboard/: index.html
src/test/java/com/costpilot/: CostpilotApplicationTests.java  (+2 more)
src/test/resources/: docker-java.properties
(+169 files in other folders)
